@@ -177,5 +177,5 @@ Finally you are ready to test the application you have made. From different shel
 
 
 <hr>
-<b>Email: </b><a href="mailto:"></a><address>ciao-users@cse.wustl.edu</address>
+<b>Email: </b><a href="mailto:"></a><address>ciao-users@list.isis.vanderbilt.edu</address>
 </body></html>
